--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jquery": "^3.7.1",
     "owl.carousel": "^2.3.4",
     "react": "^18.3.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
