--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react": "^18.3.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
+    "react-image-mapper": "^0.0.15",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "react-swipeable": "^7.0.2",
     "sass": "^1.85.0",
     "tailwind": "^4.0.0",
     "web-vitals": "^2.1.4"
